add html content and set work flow for script

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="main-wrapper">
+    <button id="start">Start</button>
+    <section id="level-game">
+      <option value="10">Difficoltà 1: 100 caselle</option>
+      <option value="9">Difficoltà 2: 81 caselle</option>
+      <option value="7">Difficoltà 3: 49 caselle</option>
+    </section>
+    <div class="container">
+
+    </div>
+  </div>
   
-
-
+  
+  
 
   <script src="js/script.js"></script>
 </body>
