add script to create dinamically box
user choices number of box to print according to 3 different levels.
When user click button start, script print box with ordered numbers from
1 to size of level chosen.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <div class="logo">
+      <img src="img/mobile-logo.png" alt="logo">
+      <h1>Campo Minato</h1>
+    </div>
+    <div class="play">
+      <label for="level">Difficoltà:</label>
+      <select name="level" id="level-game">
+        <option value="10">Easy</option>
+        <option value="9">Medium</option>
+        <option value="7">Hard</option>
+      </select>
+      <button id="start">Start</button>
+    </div>
+  </header>
   <div class="main-wrapper">
-    <button id="start">Start</button>
-    <section id="level-game">
-      <option value="10">Difficoltà 1: 100 caselle</option>
-      <option value="9">Difficoltà 2: 81 caselle</option>
-      <option value="7">Difficoltà 3: 49 caselle</option>
-    </section>
     <div class="container">
-
+      
     </div>
   </div>
   
