erase all comments, change style
erase comments of workflow in script,
change style of button, select and label

--- a/index.html
+++ b/index.html
@@ -14,23 +14,18 @@
       <h1>Campo Minato</h1>
     </div>
     <div class="play">
-      <label for="level">Difficoltà:</label>
+      <label for="level">Seleziona Livello:</label>
       <select name="level" id="level-game">
-        <option value="10">Easy</option>
-        <option value="9">Medium</option>
-        <option value="7">Hard</option>
+        <option value="10">Facile</option>
+        <option value="9">Medio</option>
+        <option value="7">Difficile</option>
       </select>
       <button id="start">Start</button>
     </div>
   </header>
   <div class="main-wrapper">
-    <div class="container">
-      
-    </div>
+    <div class="container"></div>
   </div>
-  
-  
-  
 
   <script src="js/script.js"></script>
 </body>
